--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
       <h3>Jayapal Foods Billing Software</h3>
       <p>Tech: HTML, PHP, MySQL</p>
-      <a href="https://jayapalfoods.free.nf/jayapal%20foods/index.php">[Live Project Link - To be added]</a>
+      <a href="https://jayapalfoods.free.nf/jayapal foods/index.php">[Live Project Link - To be added]</a>
     </div>
   </section>
 
